Fix double scrollbars in firefox

--- a/css/page-layout.scss
+++ b/css/page-layout.scss
@@ -21,6 +21,8 @@ p {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+	max-height: 100%;
+	overflow: hidden;
 
 	.header {
 		width: 100%;
@@ -107,10 +109,9 @@ p {
 
 	.content-container {
 		flex-grow: 1;
-
+		height: 0; // Fixes height expanding out of page
 		display: flex;
 		flex-direction: row;
-		height: 100%;
 
 		.content {
 			flex-grow: 1;
